Dockerfile update#2